Gear stats re-balance: tools and weapons